# rss-curator

./: .env.example  .gitignore  DESIGN.md  README.md  RSSs.md  pyproject.toml  reset.sh  restart.sh
app/: ai_filter.py  main.py  models.py  scheduler.py  seed.py
app/templates/: articles.html  base.html  feeds.html  interests.html
