[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "news-collector"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
    "feedparser",
    "apscheduler>=3.10",
    "sqlalchemy",
    "peewee",
    "python-dotenv",
    "httpx",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
